# llm-query-compiler

./: README.md  pyproject.toml
ai_review_test/: base.py  prompt_builder.py
examples/: demo.py
llm_query_compiler/: compiler.py  model_builder.py
llm_query_compiler/model_drivers/: openai_driver.py  prompt_builder.py
tests/: schema.json  test_compiler.py
